force-app/main/default/objects/copado__Apex_Test_Result__c/fields/copado__Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Errors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>