force-app/main/default/objects/copado__Apex_Test_Result__c/fields/copado__Successes__c.field-meta.xml
<CustomField>
    <fullName>copado__Successes__c</fullName>
    <formula>if(copado__Tests_run__c==0,0,(copado__Tests_run__c-copado__Failures__c)/copado__Tests_run__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Successes (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>