force-app/main/default/objects/copado__Apex_Test_Result__c/fields/copado__User_Story__c.field-meta.xml
<CustomField>
    <fullName>copado__User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipLabel>Apex Test Results</relationshipLabel>
    <relationshipName>Apex_Test_Results</relationshipName>
    <type>Lookup</type>
</CustomField>